--- a/package.json
+++ b/package.json
@@ -45,12 +45,8 @@
         "webpack-dev-server": "^2.4.1"
     },
     "dependencies": {
-        "framework7": "^1.5.4",
-        "framework7-vue": "^0.8.5",
-        "vue": "^2.2.4",
-        "cordova-android": "~6.1.2",
-        "cordova-browser": "~4.1.0",
-        "cordova-plugin-whitelist": "1",
+        "cordova-android": "^6.1.2",
+        "cordova-browser": "^4.1.0",
         "cordova-plugin-compat": "~1.1.0",
         "cordova-plugin-console": "~1.0.7",
         "cordova-plugin-device": "~1.1.6",
@@ -58,7 +54,11 @@
         "cordova-plugin-file": "~4.3.3",
         "cordova-plugin-geolocation": "~2.4.3",
         "cordova-plugin-globalization": "~1.0.7",
-        "cordova-plugin-network-information": "~1.3.3"
+        "cordova-plugin-network-information": "~1.3.3",
+        "cordova-plugin-whitelist": "1",
+        "framework7": "^1.5.4",
+        "framework7-vue": "^0.8.5",
+        "vue": "^2.2.4"
     },
     "cordova": {
         "platforms": [
