--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "dependencies": {
         "cordova-android": "^6.1.2",
         "cordova-browser": "^4.1.0",
+        "cordova-plugin-app-event": "file:node_modules/cordova-plugin-app-event",
+        "cordova-plugin-background-mode": "git+https://github.com/katzer/cordova-plugin-background-mode.git",
         "cordova-plugin-compat": "~1.1.0",
         "cordova-plugin-console": "~1.0.7",
         "cordova-plugin-device": "~1.1.6",
@@ -56,6 +58,7 @@
         "cordova-plugin-globalization": "~1.0.7",
         "cordova-plugin-network-information": "~1.3.3",
         "cordova-plugin-whitelist": "1",
+        "de.appplant.cordova.plugin.local-notification": "git+https://github.com/katzer/cordova-plugin-local-notifications.git",
         "framework7": "^1.5.4",
         "framework7-vue": "^0.8.5",
         "vue": "^2.2.4"
@@ -74,7 +77,9 @@
             "cordova-plugin-file": {},
             "cordova-plugin-geolocation": {},
             "cordova-plugin-globalization": {},
-            "cordova-plugin-network-information": {}
+            "cordova-plugin-network-information": {},
+            "cordova-plugin-background-mode": {},
+            "de.appplant.cordova.plugin.local-notification": {}
         }
     }
 }
