--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "cordova-plugin-file": "~4.3.3",
         "cordova-plugin-geolocation": "~2.4.3",
         "cordova-plugin-globalization": "~1.0.7",
+        "cordova-plugin-ipfs": "git+https://github.com/xSkyripper/cordova-plugin-ipfs.git",
         "cordova-plugin-network-information": "~1.3.3",
         "cordova-plugin-whitelist": "1",
         "de.appplant.cordova.plugin.local-notification": "git+https://github.com/katzer/cordova-plugin-local-notifications.git",
@@ -79,7 +80,8 @@
             "cordova-plugin-globalization": {},
             "cordova-plugin-network-information": {},
             "cordova-plugin-background-mode": {},
-            "de.appplant.cordova.plugin.local-notification": {}
+            "de.appplant.cordova.plugin.local-notification": {},
+            "cordova-plugin-ipfs": {}
         }
     }
 }
