--- a/package.json
+++ b/package.json
@@ -45,13 +45,12 @@
         "webpack-dev-server": "^2.4.1"
     },
     "dependencies": {
-        "cordova-android": "^6.1.2",
+        "cordova-android": "^6.2.3",
         "cordova-browser": "^4.1.0",
-        "cordova-plugin-app-event": "file:node_modules/cordova-plugin-app-event",
         "cordova-plugin-background-mode": "git+https://github.com/katzer/cordova-plugin-background-mode.git",
         "cordova-plugin-compat": "~1.1.0",
         "cordova-plugin-console": "~1.0.7",
-        "cordova-plugin-device": "~1.1.6",
+        "cordova-plugin-device": "^1.1.6",
         "cordova-plugin-dialogs": "~1.3.3",
         "cordova-plugin-file": "~4.3.3",
         "cordova-plugin-geolocation": "~2.4.3",
